# ScrapeScribe-client

./: .env.example  .gitignore  LICENSE  README.md  bun.lockb  cargo.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: main.yaml
.svelte-kit/: ambient.d.ts
docs/dev_notes/: project-page.md
src/: App.svelte  app.css  app.html  constants.ts  fakeDb.ts  interfaces.ts
src/lib/: api.ts  aws-amplify.ts  constants.ts  fakeDb.ts  interfaces.ts  route-protection.ts  stores.ts  utils.ts
src/lib/api/: client.ts
src/lib/components/: app-sidebar.svelte  document-editor.svelte  endpoint-card.svelte  endpoints.svelte  nav-items.svelte  nav-main.svelte  nav-user.svelte  navbar.svelte  persistent-sidebar.svelte  project-sorter.svelte  webpage-embed.svelte
src/lib/states/: auth.svelte.ts  endpoint.svelte.ts  endpoints.svelte.ts  instruction.svelte.ts  project.svelte.ts  sidebar.svelte.ts
src/pages/: About.svelte  CreateProject.svelte  EndpointDetails.svelte  Home.svelte  ProjectDetails.svelte  Projects.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/auth/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/demo/: +page.svelte
src/routes/endpoints/: +page.svelte
src/routes/help/: +page.svelte
src/routes/uh/: +page.svelte
src/stores/: projects.test.ts  projects.ts
src/styles/: basicstyles.css
src/wasm/: Cargo.toml
src/wasm/scraping-instructions/: Cargo.toml
src/wasm/scraping-instructions/src/: lib.rs
(+41 files in other folders)
