[package]
name = "scraping-instructions"
version = "0.1.0"
authors = ["https://github.com/rootofminus1atu"]
edition = "2018"
description = "WebAssembly components for ScrapeScribe"
repository = "https://github.com/SrapeScribe/scraping-instructions.git"
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
thiserror = "1.0.64"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]
resolver = "2"
